src/content/docs/en/sdk/react-native/v4/configuration.mdx
---
title: Configuration
description: Follow the guides in this section to configure the Adjust SDK.
slug: en/sdk/react-native/v4/configuration
sidebar-position: 1
versions:
   - label: v5
     value: v5
     default: true
   - label: v4
     value: v4
redirects:
   v5: /en/sdk/react-native/configuration
---

Use the methods in this document to configure the behavior of the Adjust SDK.

## Instantiate your config object {#instantiate-your-config-object}

<CodeBlock title="Method signature">

```ts
constructor(appToken: string, environment: Environment)
```

</CodeBlock>

To configure the Adjust SDK, you need to instantiate an `AdjustConfig` object. This object contains the **read-only** configuration options that you need to pass to the Adjust SDK.

To instantiate your config object, create a new `AdjustConfig` instance and pass the following parameters:

-  `appToken` (`string`): Your [Adjust app token](https://help.adjust.com/en/article/app-token-and-reporting-currency#view-your-app-details).
-  `environment` (`Environment`): The environment you want to run the SDK in. Pass `AdjustConfig.EnvironmentSandbox` to run the SDK in sandbox mode for testing. Pass `AdjustConfig.EnvironmentProduction` to run the SDK in production mode for release.

```jsx
const adjustConfig = new AdjustConfig(
   "{YourAppToken}",
   AdjustConfig.EnvironmentSandbox,
);

Adjust.create(adjustConfig);
```

## Read-only configuration {#read-only-configuration}

**Read-only** configuration options are set in your `AdjustConfig` instance **before** the initialization of the SDK. They can't be changed while the SDK is running. You MUST configure any options you want to use before running `Adjust.start()`.

### Set your logging level {#set-your-logging-level}

<CodeBlock title="Method signature">

```ts
public setLogLevel(level: LogLevel): void
```

</CodeBlock>

The Adjust SDK provides configurable log levels to return different amounts of information. The following log levels are available:

| Log level                       | Description                                |
| ------------------------------- | ------------------------------------------ |
| `AdjustConfig.LogLevelVerbose`  | Enable all logging                         |
| `AdjustConfig.LogLevelDebug`    | Enable debug logging                       |
| `AdjustConfig.LogLevelInfo`     | Only show info level logs (default option) |
| `AdjustConfig.LogLevelWarn`     | Disable info logging                       |
| `AdjustConfig.LogLevelError`    | Disable warning level logging and below    |
| `AdjustConfig.LogLevelAssert`   | Disable error level logging and below      |
| `AdjustConfig.LogLevelSuppress` | Suppress all logging                       |

You can set your log level by calling the `setLogLevel` method on your `AdjustConfig` instance with the following parameter:

-  `logLevel` (`LogLevel`): The log level you want to use.

```jsx
const adjustConfig = new AdjustConfig(
   "{YourAppToken}",
   AdjustConfig.EnvironmentSandbox,
);

adjustConfig.setLogLevel(AdjustConfig.LogLevelVerbose);

Adjust.create(adjustConfig);
```

### Set external device identifier {#set-external-device-identifier}

<CodeBlock title="Method signature">

```ts
public setExternalDeviceId(externalDeviceId: string): void
```

</CodeBlock>

An external device identifier is a custom value that you can assign to a device or user. They help you recognize users across sessions and platforms. They can also help you deduplicate installs by user so that a user isn't counted as duplicate new installs. Contact your Adjust representative to get started with external device IDs.

You can use an external device ID as a custom identifier for a device. This helps you keep continuity with your other systems. You can set property calling the `setExternalDeviceId` method with the following parameter:

-  `externalDeviceId` (`string`): Your external device identifier. This value is **case sensitive**. If you have imported external device IDs, make sure the value you pass matches the imported value.

<Callout type="seealso">

See the [External device identifiers article](https://help.adjust.com/en/article/external-device-identifiers) in the Adjust help center for more information.

</Callout>

```jsx
const adjustConfig = new AdjustConfig(
   "{YourAppToken}",
   AdjustConfig.EnvironmentSandbox,
);

adjustConfig.setExternalDeviceId("{Your-External-Device-Id}");

Adjust.create(adjustConfig);
```

If you want to use the external device ID in your business analytics, you can pass it as a [session callback parameter](/en/sdk/flutter/features/session-parameters).

You can import existing external device IDs into Adjust. This ensures that the Adjust servers match future data to your existing device records. Contact your Adjust representative for more information.

### Set default link token {#set-default-link-token}

<CodeBlock title="Method signature">

```ts
public setDefaultTracker(defaultTracker: string): void
```

</CodeBlock>

You can configure a default link token if your app is preinstalled on a device. When a user opens the preinstalled app for the first time, the install is attributed to the default link token. To set your default link token, call the `setDefaultTracker` method with the following argument:

-  `defaultTracker` (`string`): The [Adjust link token](https://help.adjust.com/en/article/links#adjust-link-token) you want to record preinstalled installs against.

```jsx
const adjustConfig = new AdjustConfig(
   "{YourAppToken}",
   AdjustConfig.EnvironmentSandbox,
);

adjustConfig.setDefaultTracker("{TrackerToken}");

Adjust.create(adjustConfig);
```

### Enable cost data sending {#enable-cost-data-sending}

<CodeBlock title="Method signature">

```ts
public setNeedsCost(needsCost: boolean): void
```

</CodeBlock>

By default, the Adjust SDK doesn't send cost data as part of a user's attribution. You can configure the SDK to send this data by enabling cost data sending. To enable cost data sending, call the `setNeedsCost` method on your config instance with the following parameter:

-  `needsCost` (`boolean`): set to `true` to enable cost data sending or `false` to disable cost data sending.

Cost data is accessible in the user's [attribution information](/en/sdk/react-native/features/attribution).

```jsx
const adjustConfig = new AdjustConfig(
   "{Your App Token}",
   AdjustConfig.EnvironmentSandbox,
);
adjustConfig.setLogLevel(AdjustLogLevel.Verbose);
adjustConfig.setNeedsCost(true);
```

### Enable background recording {#enable-background-recording}

<CodeBlock title="Method signature">

```ts
public setSendInBackground(sendInBackground: boolean): void
```

</CodeBlock>

By default, the Adjust SDK pauses the sending of requests when your app is running in the background. You can configure the SDK to send requests in the background by enabling the background recording. To enable background recording, call the `setSendInBackground` method on your config instance with the following parameter:

-  `sendInBackground` (`boolean`): Set to `true` to enable background sending or `false` to disable background sending.

```jsx
const adjustConfig = new AdjustConfig(
   "{Your App Token}",
   AdjustConfig.EnvironmentSandbox,
);

adjustConfig.setSendInBackground(true);

Adjust.create(adjustConfig);
```

### Enable event buffering {#enable-event-buffering}

<CodeBlock title="Method signature">

```ts
public setEventBufferingEnabled(eventBufferingEnabled: boolean): void
```

</CodeBlock>

The Adjust SDK sends event information as soon as a user triggers an event in your app. You can send event information on a schedule by enabling event buffering. Event buffering stores events in a local buffer on the device and sends all requests once per minute.

Your config object contains a boolean `eventBufferingEnabled` property that controls this behavior. You can set this property by calling the `setEventBufferingEnabled` method on your config object with the following parameter:

-  `eventBufferingEnabled` (`boolean`): Set to `true` to enable event buffering or `false` to disable event buffering.

```jsx
const adjustConfig = new AdjustConfig(
   "{YourAppToken}",
   AdjustConfig.EnvironmentSandbox,
);

adjustConfig.setEventBufferingEnabled(true);

Adjust.create(adjustConfig);
```

### Delay the start of the SDK {#delay-the-start-of-the-sdk}

<CodeBlock title="Method signature">

```ts
public setDelayStart(delayStart: number): void
```

</CodeBlock>

By default, the Adjust SDK starts as soon as your app opens. If you want to send data that isn't available at launch in [session parameters](/en/sdk/android/features/session-parameters), you can delay the start of the SDK. This can be helpful if you are sending information such as unique identifiers.

To configure a startup delay, call the `setDelayStart` method with the following argument:

-  `delayStart` (`number`): The time (in seconds) by which to delay the start of the SDK. You can delay the start of the SDK by up to **10 seconds**.

```jsx
const adjustConfig = new AdjustConfig(
   "{YourAppToken}",
   AdjustConfig.EnvironmentSandbox,
);

adjustConfig.setDelayStart(5.5);

Adjust.create(adjustConfig);
```

## Dynamic configuration {#dynamic-configuration}

**Dynamic** configuration options may be changed during the SDK's lifecycle in response to events or actions taken by the user.

### Toggle offline mode {#toggle-offline-mode}

<CodeBlock title="Method signature">

```ts
setOfflineMode: (enabled: boolean) => void
```

</CodeBlock>

<Callout type="important">

The offline mode setting isn't remembered between sessions. Offline mode is disabled at the start of each new session.

</Callout>

The Adjust SDK sends event and session data to Adjust's servers in real time. You can pause the sending of information by putting the SDK in offline mode. In offline mode the SDK stores all data in a local file on the device. The SDK sends this information to Adjust's servers when you disable offline mode.

You can toggle offline mode at any time by calling the `setOfflineMode` method with the following argument:

-  `enabled` (`boolean`): Set to `true` to enable offline mode or `false` to disable offline mode.

```jsx
Adjust.setOfflineMode(true);
```

### Set push tokens {#set-push-tokens}

<CodeBlock title="Method signature">

```ts
setPushToken: (token: string) => void
```

</CodeBlock>

Push tokens are used for [Audiences](https://help.adjust.com/en/article/audiences) and client callbacks. They're also required for [Uninstall and reinstall measurement](https://help.adjust.com/en/article/uninstalls-reinstalls).

Your config object contains a string `pushToken` property that you can use to store your push token. You can update this property at any time by calling the `setPushToken` method and passing the following arguments:

-  `token` (`string`): Your push token.

<Callout type="note">

If you have access to the push token from the web view, you can call the `setPushToken` method in Javascript.

</Callout>

```jsx
Adjust.setPushToken("YourPushNotificationToken");
```

### Disable or enable the SDK {#disable-or-enable-the-sdk}

<Callout type="important">

You can only call this method after the first session. This setting persists between sessions.

</Callout>

<CodeBlock title="Method siganture">

```ts
setEnabled: (enabled: boolean) => void
```

</CodeBlock>

The Adjust SDK runs by default when your app is open. You can disable and re-enable the Adjust SDK to pause and resume recording. When you disable the Adjust SDK, it doesn't send any data to Adjust's servers.

You can enable or disable the SDK at any time by calling the `setEnabled` method with the following argument:

-  `enabled` (`boolean`): Set to `true` to enable the SDK or `false` to disable the SDK.

```jsx
Adjust.setEnabled(false);
```

#### Check enabled status {#check-enabled-status}

<CodeBlock title="Method signature">

```ts
isEnabled: (callback: (enabled: boolean) => void) => void
```

</CodeBlock>

You can check if the Adjust SDK is enabled at any time by calling the `isEnabled` method. This method returns a `boolean` value indicating if the SDK is **enabled** (`true`) or **disabled** (`false`).

```jsx
Adjust.isEnabled();
```
